2008-03-04  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::LIBRARY USAGE): Remove initial
	boot call.
	(TROUBLESHOOTING): Adjust paragraph wording.
	(Perl and double install is needed): Removed.
	(Install commands): Remove traces of --init-db option.
	(MISCELLANEOUS::Use of hardlinks): Add new topic.

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckBinFiles): Add
	bash and gawk dependency check.
	(CygbuildIsDarcsPackage): New.
	(CygbuildIsMonotonePackage): New.
	(CygbuildVersionControlType): Add Monotone, Darcs detection.
	(CygbuildMain): Under CYGBUILD_LIB, boot few variables.
	(CygbuildCmdInstallCheckPerlFile): Add cp -l check.
	(CygbuildCmdInstallCheckShellFiles): Activate function.
	Funtion was unused due to file name bug in for-loop.
	(CygbuildCmdInstallCheckPerlFile): Use relative filenames in
	messages.
	(CygbuildFindDo): New.
	(CygbuildBootVariablesGlobalMain): Adjust CYGBUILD_FIND_EXCLUDE.
	(CygbuildCmdInstallCheckTexiFiles): New.
	(CygbuildCmdInstallCheckMain): Use `CygbuildCmdInstallCheckTexiFiles'.
	(CygbuildCygcheckLibraryDepGrepTraditonal): Use variable CYGCHECK
	(CygbuildDefineGlobalCommands): Move CYGCHECK and CYGPATH to
	the beginning.
	(CygbuildPostinstallWriteMain): Add comment about '#:<stanza>'
	to postinstall.sh

2008-03-03  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalMain): Add
	VERSION file to variable cygbuild_opt_exclude_tmp_files.
	(CygbuildMakefilePrefixCheck): Adjust grep to find prefix=
	(CygbuildCmdFilesWrite): Fix variable name from 'to' to 'todir'.
	(CygbuildPatchList): Ignore */tmp/* directories.
	(CygbuildConfOptionAdjustment): Notify about --with and --without
	options in ./configure.
	(CygbuildCmdBuildStdMakefile): move set -x call.
	(CygbuildInstallFixEtcdirInstall): Add --quiet to egrep.
	(CygbuildBootVariablesGlobalCacheSet): Add
	CYGBUILD_CACHE_PERL_FILES.
	(CygbuildDefineGlobalPerl): New.
	(CygbuildDefineGlobalCommands): Define CYGPATH, CYGCHECK.